changed prosto_ogon form

--- a/birthday/without-image.html
+++ b/birthday/without-image.html
@@ -60,6 +60,7 @@
                                                             valign="top"
                                                             style="
                                                                 background: white;
+
                                                                 padding: 0cm 0cm 0cm 0cm;
                                                             "
                                                         >
@@ -71,6 +72,8 @@
                                                                     class="x_MsoNormalTable"
                                                                     width="0"
                                                                     style="
+                                                                        background: #ecf1f4;
+
                                                                         width: 450pt;
                                                                         border-collapse: collapse;
                                                                     "
@@ -110,7 +113,7 @@
                                                                                                 data-custom="AAMkADgwOTI3MWU3LTA1OWQtNGNiMy1hNzcwLWViNzhkZDljMzRlOABGAAAAAAAaaEDvgPwGTrUHWGSrrKUgBwAj8LrShRPiTrPl731B3e%2FxAAAAAAEMAAAj8LrShRPiTrPl731B3e%2FxAACyMlDnAAABEgAQAInxc7dWoxBEiqvsORIEMA4%3D"
                                                                                                 naturalheight="44"
                                                                                                 naturalwidth="188"
-                                                                                                src="./images/logo.jpg"
+                                                                                                src="./images/logo.png"
                                                                                                 border="0"
                                                                                                 height="96"
                                                                                                 id="x_Рисунок_x0020_1"
@@ -170,62 +173,6 @@
                                                                 </table>
                                                             </div>
 
-                                                            <p
-                                                                align="center"
-                                                                class="x_MsoNormal"
-                                                                style="text-align: center"
-                                                            >
-                                                                <span
-                                                                    style="
-                                                                        font-family: Arial,
-                                                                            sans-serif, serif,
-                                                                            EmojiFont;
-                                                                        color: rgb(0, 61, 166);
-                                                                    "
-                                                                    ><img
-                                                                        originalsrc="cid:img1"
-                                                                        data-custom="AAMkADgwOTI3MWU3LTA1OWQtNGNiMy1hNzcwLWViNzhkZDljMzRlOABGAAAAAAAaaEDvgPwGTrUHWGSrrKUgBwAj8LrShRPiTrPl731B3e%2FxAAAAAAEMAAAj8LrShRPiTrPl731B3e%2FxAACyMlDnAAABEgAQABmbgJKyQShPlcmV2O0WNkE%3D"
-                                                                        naturalheight="402"
-                                                                        naturalwidth="600"
-                                                                        src="./images/banner.jpg"
-                                                                        alt=""
-                                                                        border="0"
-                                                                        height="402"
-                                                                        id="x_Рисунок_x0020_2"
-                                                                        width="600"
-                                                                        style="
-                                                                            width: 6.25in;
-                                                                            height: 4.12in;
-                                                                        " /></span
-                                                                ><span
-                                                                    style="
-                                                                        font-size: 1pt;
-                                                                        font-family: 'Times New Roman',
-                                                                            serif, serif, EmojiFont;
-                                                                    "
-                                                                ></span>
-                                                            </p>
-                                                            <div>
-                                                                <p
-                                                                    align="center"
-                                                                    class="x_MsoNormal"
-                                                                    style="
-                                                                        text-align: center;
-                                                                        line-height: 30pt;
-                                                                    "
-                                                                >
-                                                                    <span
-                                                                        style="
-                                                                            font-size: 28.5pt;
-                                                                            font-family: 'Times New Roman',
-                                                                                serif, serif,
-                                                                                EmojiFont;
-                                                                        "
-                                                                        >&nbsp;</span
-                                                                    >
-                                                                </p>
-                                                            </div>
-
                                                             <div align="center">
                                                                 <table
                                                                     border="0"
@@ -277,6 +224,27 @@
                                                                                         0cm 0cm;
                                                                                 "
                                                                             >
+                                                                                <div>
+                                                                                    <p
+                                                                                        align="center"
+                                                                                        class="x_MsoNormal"
+                                                                                        style="
+                                                                                            text-align: center;
+                                                                                            line-height: 21pt;
+                                                                                        "
+                                                                                    >
+                                                                                        <span
+                                                                                            style="
+                                                                                                font-size: 19.5pt;
+                                                                                                font-family: 'Times New Roman',
+                                                                                                    serif,
+                                                                                                    serif,
+                                                                                                    EmojiFont;
+                                                                                            "
+                                                                                            >&nbsp;</span
+                                                                                        >
+                                                                                    </p>
+                                                                                </div>
                                                                                 <div>
                                                                                     <p
                                                                                         class="x_MsoNormal"
