fix modals styles

--- a/modals/index.html
+++ b/modals/index.html
@@ -66,6 +66,12 @@
                         </div>
                         <div class="modal__body">
                             <!-- Контент в виде html-верстки -->
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt i
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt illum
+                            et perspiciatis, nemo odio, deserunt ipsam facilis autem expedita animi
+                            atque ipsum harum veritatis qui ea maxime delectus esse deleniti! lum et
+                            perspiciatis, nemo odio, deserunt ipsam facilis autem expedita animi
+                            atque ipsum harum veritatis qui ea maxime delectus esse deleniti!
                         </div>
                     </div>
                 </div>
