--- a/spa/index.html
+++ b/spa/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="news-template-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae eius commodi, soluta
             quo debitis, veniam explicabo exercitationem sint nostrum sapiente suscipit tempore
             nobis temporibus dolore sunt nulla dolorum praesentium! Lorem ipsum dolor sit amet
@@ -116,6 +116,13 @@
             dolorum praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quae
             eius commodi, soluta quo debitis, veniam explicabo exercitationem sint nostrum sapiente
             suscipit tempore nobis temporibus dolore sunt nulla dolorum praesentium!
+            <a href="#">Ссылка</a>
         </div>
+        <a href="#" id="toTop" style="display: inline"
+            ><span id="toTopHover" style="opacity: 0"></span><span id="toTopHover"></span
+            ><span id="toTopHover"></span><span id="toTopHover"></span><span id="toTopHover"></span
+            ><span id="toTopHover"></span><span id="toTopHover"></span
+            ><span id="toTopHover"></span>вверх</a
+        >
     </body>
 </html>
