update prosto_ogon images and styles

--- a/prosto_ogon/index.html
+++ b/prosto_ogon/index.html
@@ -672,7 +672,7 @@
                                     </div>
                                     <!-- thanks-btn_active - класс активной кнопки -->
                                     <button
-                                        class="thanks-btn user-label__btn text"
+                                        class="thanks-btn user-label__btn thanks-btn_active text"
                                         type="button"
                                         aria-label="Оценить пожелание"
                                     >
