--- a/birthday/index.html
+++ b/birthday/index.html
@@ -183,15 +183,12 @@
                                                                         color: rgb(0, 61, 166);
                                                                     "
                                                                     ><img
-                                                                        originalsrc="cid:img1"
-                                                                        data-custom="AAMkADgwOTI3MWU3LTA1OWQtNGNiMy1hNzcwLWViNzhkZDljMzRlOABGAAAAAAAaaEDvgPwGTrUHWGSrrKUgBwAj8LrShRPiTrPl731B3e%2FxAAAAAAEMAAAj8LrShRPiTrPl731B3e%2FxAACyMlDnAAABEgAQABmbgJKyQShPlcmV2O0WNkE%3D"
                                                                         naturalheight="402"
                                                                         naturalwidth="600"
                                                                         src="./images/banner.jpg"
                                                                         alt=""
                                                                         border="0"
                                                                         height="402"
-                                                                        id="x_Рисунок_x0020_2"
                                                                         width="600"
                                                                         style="
                                                                             width: 6.25in;
@@ -414,68 +411,58 @@
                                                                                                                                         EmojiFont;
                                                                                                                                 "
                                                                                                                             >
-                                                                                                                                <span
-                                                                                                                                    >Cергей,</span
-                                                                                                                                ><br /><br />
-                                                                                                                                <span
-                                                                                                                                    >Поздравляю
-                                                                                                                                    тебя
-                                                                                                                                    с
-                                                                                                                                    Днём
-                                                                                                                                    рождения
-                                                                                                                                    и
-                                                                                                                                    желаю
-                                                                                                                                    осуществления
-                                                                                                                                    заветной
-                                                                                                                                    мечты
-                                                                                                                                    в
-                                                                                                                                    этом
-                                                                                                                                    году!</span
-                                                                                                                                ><br /><br />
-                                                                                                                                <span
-                                                                                                                                    >Вся
-                                                                                                                                    команда
-                                                                                                                                    Газпромнефть-ЦР
-                                                                                                                                    рада,
-                                                                                                                                    что
-                                                                                                                                    ты
-                                                                                                                                    работаешь
-                                                                                                                                    именно
-                                                                                                                                    с
-                                                                                                                                    нами.
-                                                                                                                                    Спасибо
-                                                                                                                                    тебе
-                                                                                                                                    за
-                                                                                                                                    твой
-                                                                                                                                    вклад
-                                                                                                                                    в
-                                                                                                                                    общее
-                                                                                                                                    дело
-                                                                                                                                    и
-                                                                                                                                    честный
-                                                                                                                                    труд.</span
-                                                                                                                                ><br /><br />
-                                                                                                                                <span
-                                                                                                                                    >В
-                                                                                                                                    этот
-                                                                                                                                    яркий
-                                                                                                                                    день
-                                                                                                                                    я
-                                                                                                                                    хочу
-                                                                                                                                    пожелать
-                                                                                                                                    тебе
-                                                                                                                                    как
-                                                                                                                                    можно
-                                                                                                                                    больше
-                                                                                                                                    близких
-                                                                                                                                    людей
-                                                                                                                                    рядом
-                                                                                                                                    и
-                                                                                                                                    улыбок!
-                                                                                                                                    (денег
-                                                                                                                                    нет)</span
-                                                                                                                                ></b
-                                                                                                                            >
+                                                                                                                                Cергей,<br /><br />
+                                                                                                                                Поздравляю
+                                                                                                                                тебя
+                                                                                                                                с
+                                                                                                                                Днём
+                                                                                                                                рождения
+                                                                                                                                и
+                                                                                                                                желаю
+                                                                                                                                осуществления
+                                                                                                                                заветной
+                                                                                                                                мечты
+                                                                                                                                в
+                                                                                                                                этом
+                                                                                                                                году!<br /><br />
+                                                                                                                                Вся
+                                                                                                                                команда
+                                                                                                                                Газпромнефть-ЦР
+                                                                                                                                рада,
+                                                                                                                                что
+                                                                                                                                ты
+                                                                                                                                работаешь
+                                                                                                                                именно
+                                                                                                                                с
+                                                                                                                                нами.
+                                                                                                                                Спасибо
+                                                                                                                                тебе
+                                                                                                                                за
+                                                                                                                                твой
+                                                                                                                                вклад
+                                                                                                                                в
+                                                                                                                                общее
+                                                                                                                                дело
+                                                                                                                                и
+                                                                                                                                честный
+                                                                                                                                труд.<br /><br />
+                                                                                                                                В
+                                                                                                                                этот
+                                                                                                                                яркий
+                                                                                                                                день
+                                                                                                                                я
+                                                                                                                                хочу
+                                                                                                                                пожелать
+                                                                                                                                тебе
+                                                                                                                                как
+                                                                                                                                можно
+                                                                                                                                больше
+                                                                                                                                близких
+                                                                                                                                людей
+                                                                                                                                рядом
+                                                                                                                                и
+                                                                                                                                улыбок!
+                                                                                                                            </b>
                                                                                                                         </p>
                                                                                                                     </div>
                                                                                                                 </td>
