--- a/birthday/without-image.html
+++ b/birthday/without-image.html
@@ -382,68 +382,58 @@
                                                                                                                                         EmojiFont;
                                                                                                                                 "
                                                                                                                             >
-                                                                                                                                <span
-                                                                                                                                    >Cергей,</span
-                                                                                                                                ><br /><br />
-                                                                                                                                <span
-                                                                                                                                    >Поздравляю
-                                                                                                                                    тебя
-                                                                                                                                    с
-                                                                                                                                    Днём
-                                                                                                                                    рождения
-                                                                                                                                    и
-                                                                                                                                    желаю
-                                                                                                                                    осуществления
-                                                                                                                                    заветной
-                                                                                                                                    мечты
-                                                                                                                                    в
-                                                                                                                                    этом
-                                                                                                                                    году!</span
-                                                                                                                                ><br /><br />
-                                                                                                                                <span
-                                                                                                                                    >Вся
-                                                                                                                                    команда
-                                                                                                                                    Газпромнефть-ЦР
-                                                                                                                                    рада,
-                                                                                                                                    что
-                                                                                                                                    ты
-                                                                                                                                    работаешь
-                                                                                                                                    именно
-                                                                                                                                    с
-                                                                                                                                    нами.
-                                                                                                                                    Спасибо
-                                                                                                                                    тебе
-                                                                                                                                    за
-                                                                                                                                    твой
-                                                                                                                                    вклад
-                                                                                                                                    в
-                                                                                                                                    общее
-                                                                                                                                    дело
-                                                                                                                                    и
-                                                                                                                                    честный
-                                                                                                                                    труд.</span
-                                                                                                                                ><br /><br />
-                                                                                                                                <span
-                                                                                                                                    >В
-                                                                                                                                    этот
-                                                                                                                                    яркий
-                                                                                                                                    день
-                                                                                                                                    я
-                                                                                                                                    хочу
-                                                                                                                                    пожелать
-                                                                                                                                    тебе
-                                                                                                                                    как
-                                                                                                                                    можно
-                                                                                                                                    больше
-                                                                                                                                    близких
-                                                                                                                                    людей
-                                                                                                                                    рядом
-                                                                                                                                    и
-                                                                                                                                    улыбок!
-                                                                                                                                    (денег
-                                                                                                                                    нет)</span
-                                                                                                                                ></b
-                                                                                                                            >
+                                                                                                                                Cергей,<br /><br />
+                                                                                                                                Поздравляю
+                                                                                                                                тебя
+                                                                                                                                с
+                                                                                                                                Днём
+                                                                                                                                рождения
+                                                                                                                                и
+                                                                                                                                желаю
+                                                                                                                                осуществления
+                                                                                                                                заветной
+                                                                                                                                мечты
+                                                                                                                                в
+                                                                                                                                этом
+                                                                                                                                году!<br /><br />
+                                                                                                                                Вся
+                                                                                                                                команда
+                                                                                                                                Газпромнефть-ЦР
+                                                                                                                                рада,
+                                                                                                                                что
+                                                                                                                                ты
+                                                                                                                                работаешь
+                                                                                                                                именно
+                                                                                                                                с
+                                                                                                                                нами.
+                                                                                                                                Спасибо
+                                                                                                                                тебе
+                                                                                                                                за
+                                                                                                                                твой
+                                                                                                                                вклад
+                                                                                                                                в
+                                                                                                                                общее
+                                                                                                                                дело
+                                                                                                                                и
+                                                                                                                                честный
+                                                                                                                                труд.<br /><br />
+                                                                                                                                В
+                                                                                                                                этот
+                                                                                                                                яркий
+                                                                                                                                день
+                                                                                                                                я
+                                                                                                                                хочу
+                                                                                                                                пожелать
+                                                                                                                                тебе
+                                                                                                                                как
+                                                                                                                                можно
+                                                                                                                                больше
+                                                                                                                                близких
+                                                                                                                                людей
+                                                                                                                                рядом
+                                                                                                                                и
+                                                                                                                                улыбок!
+                                                                                                                            </b>
                                                                                                                         </p>
                                                                                                                     </div>
                                                                                                                 </td>
