--- a/events/register/index.html
+++ b/events/register/index.html
@@ -32,16 +32,49 @@
                         </p>
                     </div>
                     <div class="registration-event-list-item__subscriber text-2">
-                        <p>
-                            Вы записаны на это время пользователем<br />
-                            Иванов Иван Иванович (<a href="#">Ivanov.I1@gazprom-neft.ru</a>);
+                        <p class="registration-event-list-item__subscriber-info">
+                            Вы записаны на это время пользователем
                         </p>
+                        <div class="registration-event-list-item__subscriber-user">
+                            <p class="registration-event-list-item__subscriber-name">
+                                Иванов Иван Иванович
+                            </p>
+                            (<a class="registration-event-list-item__subscriber-link"
+                                >Ivanov.I1@gazprom-neft.ru</a
+                            >)
+                        </div>
                     </div>
                     <button data-id="button-register" class="button button_view_ghost">
                         Отменить запись
                     </button>
                 </li>
             </ul>
+            <div
+                class="registration-event-list__modal registration-event-list-confirm-modal modal confirm-modal"
+            >
+                <div class="modal__content confirm-modal__modal-content">
+                    <div class="modal__header">
+                        <h2
+                            class="modal__title _font-size-l _line-height-small _font-weight-normal"
+                        >
+                            Вы подтверждаете отмену записи?
+                        </h2>
+                    </div>
+                    <div class="modal__body friday__modal-body">
+                        <div class="registration-event-list-confirm-modal__handles">
+                            <button
+                                type="submit"
+                                class="button button_view_primary confirm-modal__confirm"
+                            >
+                                Подтвердить
+                            </button>
+                            <button type="button" class="modal-close button button_view_ghost">
+                                Отмена
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="registration-event-modal modal">
                 <div class="modal__content registration-event-modal__content">
@@ -355,7 +388,11 @@
                         </p>
                     </div>
                     <div class="registration-event-list-item__subscriber text-2">
-                        <p></p>
+                        <p class="registration-event-list-item__subscriber-info"></p>
+                        <div class="registration-event-list-item__subscriber-user">
+                            <p class="registration-event-list-item__subscriber-name"></p>
+                            (<a class="registration-event-list-item__subscriber-link"></a>)
+                        </div>
                     </div>
                     <button data-id="button-register" class="button button_view_ghost">
                         Отменить запись
