--- a/events/index.html
+++ b/events/index.html
@@ -20,35 +20,8 @@
                 Открыть
             </button>
 
-            <ul class="registration-event-list">
-                <li class="registration-event-list-item">
-                    <div class="registration-event-list-item__info">
-                        <p class="registration-event-list-item__name title-4">
-                            Название мероприятия
-                        </p>
-                        <p class="registration-event-list-item__time text-3">
-                            <span class="registration-event-list-item__date">21.06.2025</span>
-                            <span class="registration-event-list-item__day">Четверг</span>
-                        </p>
-                    </div>
-                    <div class="registration-event-list-item__subscriber text-2">
-                        <p class="registration-event-list-item__subscriber-info">
-                            Вы записаны на это время пользователем
-                        </p>
-                        <div class="registration-event-list-item__subscriber-user">
-                            <p class="registration-event-list-item__subscriber-name">
-                                Иванов Иван Иванович
-                            </p>
-                            (<a class="registration-event-list-item__subscriber-link"
-                                >Ivanov.I1@gazprom-neft.ru</a
-                            >)
-                        </div>
-                    </div>
-                    <button data-id="button-register" class="button button_view_ghost">
-                        Отменить запись
-                    </button>
-                </li>
-            </ul>
+            <ul class="registration-event-list"></ul>
+
             <div
                 class="registration-event-list__modal registration-event-list-confirm-modal modal confirm-modal"
             >
@@ -75,7 +48,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="registration-event-modal modal">
                 <div class="modal__content registration-event-modal__content">
                     <div class="modal__header">
