added not-found for events

--- a/events/index.html
+++ b/events/index.html
@@ -20,7 +20,25 @@
                 Открыть
             </button>
 
-            <ul class="registration-event-list"></ul>
+            <div class="registration-event-list-container">
+                <ul class="registration-event-list"></ul>
+                <div class="registration-event-list-not-found">
+                    <img
+                        src="./images/not-found.png"
+                        class="registration-event-list-not-found__img"
+                    />
+                    <p
+                        class="registration-event-list-not-found__title _font-size-xl _line-height-normal _font-weight-bold"
+                    >
+                        У вас нет записей
+                    </p>
+                    <p
+                        class="registration-event-list-not-found__text _font-size-s _line-height-normal"
+                    >
+                        Записывайтесь на мероприятия<br />и отслеживайте их в этом разделе
+                    </p>
+                </div>
+            </div>
 
             <div
                 class="registration-event-list__modal registration-event-list-confirm-modal modal confirm-modal"
