change modal selector

--- a/events/index.html
+++ b/events/index.html
@@ -41,17 +41,17 @@
             </div>
 
             <div
-                class="registration-event-list__modal registration-event-list-confirm-modal modal confirm-modal"
+                class="registration-event-list__modal registration-event-list-confirm-modal c-modal confirm-modal"
             >
-                <div class="modal__content confirm-modal__modal-content">
-                    <div class="modal__header">
+                <div class="c-modal__content confirm-modal__modal-content">
+                    <div class="c-modal__header">
                         <h2
-                            class="modal__title _font-size-l _line-height-small _font-weight-normal"
+                            class="c-modal__title _font-size-l _line-height-small _font-weight-normal"
                         >
                             Вы подтверждаете отмену записи?
                         </h2>
                     </div>
-                    <div class="modal__body friday__modal-body">
+                    <div class="c-modal__body friday__modal-body">
                         <div class="registration-event-list-confirm-modal__handles">
                             <button
                                 type="submit"
@@ -59,19 +59,19 @@
                             >
                                 Подтвердить
                             </button>
-                            <button type="button" class="modal-close button button_view_ghost">
+                            <button type="button" class="c-modal-close button button_view_ghost">
                                 Отмена
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="registration-event-modal modal">
-                <div class="modal__content registration-event-modal__content">
-                    <div class="modal__header">
-                        <h2 class="modal__title title-3">Регистрация на мероприятие</h2>
+            <div class="registration-event-modal c-modal">
+                <div class="c-modal__content registration-event-modal__content">
+                    <div class="c-modal__header">
+                        <h2 class="c-modal__title title-3">Регистрация на мероприятие</h2>
                     </div>
-                    <div class="modal__body registration-event with-custom-scrollbar">
+                    <div class="c-modal__body registration-event with-custom-scrollbar">
                         <div class="registration-event__header text-1"></div>
 
                         <div class="registration-event__info">
@@ -275,7 +275,7 @@
                             >
                                 Зарегистрировать
                             </button>
-                            <button type="button" class="button button_view_ghost modal-close">
+                            <button type="button" class="button button_view_ghost c-modal-close">
                                 Отмена
                             </button>
                         </div>
